--- a/app/src/main/res/layout/activity_pinpad.xml
+++ b/app/src/main/res/layout/activity_pinpad.xml
@@ -12,11 +12,25 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/txtAmount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="20dp" />
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Введите ПИН-код"
             android:textAlignment="center"
             android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/txtPtc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="16dp" />
 
         <TextView
             android:id="@+id/txtPin"
